--- a/html/messi.html
+++ b/html/messi.html
@@ -9,12 +9,14 @@
     <script src='main.js'></script>
 </head>
 <body>
-  
-    <h1 id="">Lionel 10 </h1>
-    <h2> Messi</h2>
-    <img src="C:\Users\murillo.teixeira\Documents\Messi l\img\5982532.jpg">
-   <img src="img/lionel-messi1.webp">
+    <div class="fundo">
+        <h1>Lionel 10</h1>
+        <h2>Messi</h2>
+        <img src="barcelona.jpg"img class="escudo">
+        <img src="Messi.png"img class="Messi">
+    </div>
 </body>
+
 
 
 </html>
